--- a/less/navigation.less
+++ b/less/navigation.less
@@ -22,6 +22,11 @@ nav {
       flex-flow: column nowrap;
       div {
         flex-flow: row nowrap;
+        // border: 1px dashed red;
+        margin-top: 10px;
+        position: relative;
+        top: 15px;
       }
+
     }
 }
